--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
+    "immutable": "^3.8.2",
     "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
@@ -22,7 +24,16 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.3.0"
+    "react-native-screens": "^3.3.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-action-buffer": "^1.2.0",
+    "redux-form": "^7.4.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.10.2",
+    "redux-persist-immutable": "^4.3.1",
+    "redux-persist-transform-immutable": "^5.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
