--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
+    "react-chat-elements": "^10.15.0",
+    "react-dom": "^17.0.2",
     "react-native": "0.64.2",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
@@ -25,6 +27,8 @@
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.6.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-action-buffer": "^1.2.0",
