--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^12.0.0",
     "@react-native-firebase/auth": "^12.0.0",
     "@react-native-firebase/firestore": "^12.0.0",
@@ -31,6 +32,8 @@
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-swift": "^1.2.3",
+    "react-native-track-player": "^1.2.7",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
