--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^12.0.0",
     "@react-native-firebase/firestore": "^12.0.0",
     "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
@@ -25,16 +26,21 @@
     "react-chat-elements": "^10.15.0",
     "react-dom": "^17.0.2",
     "react-native": "0.64.2",
+    "react-native-appearance": "^0.3.4",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-swift": "^1.2.3",
+    "react-native-tab-view": "^3.0.1",
     "react-native-track-player": "^1.2.7",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "^0.16.5",
+    "react-native-webview": "^11.6.4",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-action-buffer": "^1.2.0",
