--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-swift": "^1.2.3",
     "react-native-tab-view": "^3.0.1",
     "react-native-track-player": "^1.2.7",
