--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "color": "^3.1.3",
     "immutable": "^3.8.2",
     "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
@@ -30,6 +31,7 @@
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-pager-view": "^5.2.1",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-router-flux": "^4.3.1",
