--- a/ios/hanzoApp/Info.plist
+++ b/ios/hanzoApp/Info.plist
@@ -72,6 +72,7 @@
 		<string>rubicon-icon-font.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>bradhitc.ttf</string>
 	</array>
 </dict>
 </plist>
