--- a/ios/hanzoApp/Info.plist
+++ b/ios/hanzoApp/Info.plist
@@ -73,6 +73,8 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>bradhitc.ttf</string>
+		<string>BradleyHandITCTT-Bold.ttf</string>
+		<string>Bradleys Pen.ttf</string>
 	</array>
 </dict>
 </plist>
