style customize and ios firebase

--- a/ios/hanzoApp/Info.plist
+++ b/ios/hanzoApp/Info.plist
@@ -75,6 +75,7 @@
 		<string>bradhitc.ttf</string>
 		<string>BradleyHandITCTT-Bold.ttf</string>
 		<string>Bradleys Pen.ttf</string>
+		<string>Moyko.ttf</string>
 	</array>
 </dict>
 </plist>
