--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-dom": "^17.0.2",
     "react-native": "0.64.2",
     "react-native-appearance": "^0.3.4",
+    "react-native-audio": "^4.3.0",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-picker": "^4.0.4",
     "react-native-pager-view": "^5.2.1",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
@@ -39,6 +41,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-sound": "^0.11.0",
     "react-native-swift": "^1.2.3",
     "react-native-tab-view": "^3.0.1",
     "react-native-track-player": "^1.2.7",
