--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "color": "^3.1.3",
+    "form-data": "^4.0.0",
     "immutable": "^3.8.2",
     "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
