--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.0.4",
+    "react-native-lightbox-v2": "^0.8.7",
     "react-native-pager-view": "^5.2.1",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
